<resources>
    <string name="app_name">Tesco\'s Little Helper</string>
    <string name="welcome">Welcome to Tesco\'s Little Helper!</string>
    <string name="scan_item">Scan Item</string>
    <string name="scanned_items">Scanned Items</string>
    <string name="shopping_list">Shopping List</string>
    <string name="add_to_favourites">Add To Favourites</string>
    <string name="details">Details</string>
    <string name="add_to_cart">Add To cart</string>
    <string name="add_mocked_item">Add mocked item</string>
    <string name="bought">Bought</string>
    <string name="delete">Delete</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="save">Save</string>
    <string name="clear_all">Clear All</string>
    <string name="don_t_save">Don\'t save</string>
    <string name="no_api_response">Something went wrong, we could not get answer from Tesco</string>
    <string name="save_anyway">Save anyway?</string>
    <string name="product_in_cart">Product in Cart</string>
</resources>
