<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.SaveProductActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <EditText
            android:id="@+id/saveEditName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/name"
            android:inputType="text"
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description" />

        <EditText
            android:id="@+id/saveEditDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/description"
            android:inputType="text"
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price" />

        <EditText
            android:id="@+id/saveEditPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/price"
            android:inputType="numberDecimal"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/saveSaveEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/save" />

        <Button
            android:id="@+id/saveDontSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/don_t_save" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/no_api_response" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/save_anyway" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>