<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnScanItem"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/scan_item" />

        <Button
            android:id="@+id/btnScannedProducts"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/scanned_items"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/shopping_list"/>

        <TextView
            android:id="@+id/txtView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textAlignment="center"/>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>